add balance to peggyOut, swagger changed
